--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,11 +26,34 @@ android {
     buildFeatures {
         viewBinding true
     }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 dependencies {
+    // DI
+    def koin_version = '2.1.6'
+    implementation "org.koin:koin-android:$koin_version"
+
     // Google map
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.maps.android:maps-ktx:2.1.0'
+
+    // Fused Location Provider
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+
+    // Lifecycle Arch Components
+    def lifecycle_version = '2.2.0'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+
+    // Permission
+    implementation 'org.permissionsdispatcher:permissionsdispatcher-ktx:1.0.0-alpha2'
+
+    // Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.8'
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
