--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     // DI
     def koin_version = '2.1.6'
     implementation "org.koin:koin-android:$koin_version"
+    implementation "org.koin:koin-android-viewmodel:$koin_version"
 
     // Google map
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
@@ -45,7 +46,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0'
 
     // Lifecycle Arch Components
-    def lifecycle_version = '2.2.0'
+    def lifecycle_version = '2.3.0-alpha05'
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
@@ -54,7 +55,9 @@ dependencies {
     implementation 'org.permissionsdispatcher:permissionsdispatcher-ktx:1.0.0-alpha2'
 
     // Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.8'
+    def coroutines_version = '1.3.8'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$coroutines_version"
 
     // Widgets
     implementation 'com.google.android.material:material:1.1.0'
@@ -63,6 +66,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.activity:activity-ktx:1.2.0-alpha06'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
