--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 29
@@ -39,7 +38,7 @@ dependencies {
     implementation "org.koin:koin-android:$koin_version"
     implementation "org.koin:koin-android-viewmodel:$koin_version"
 
-    // Google map
+    // Google maps
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.maps.android:maps-ktx:2.1.0'
 
@@ -47,12 +46,11 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0'
 
     // Lifecycle Arch Components
-    def lifecycle_version = '2.3.0-alpha05'
-    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+    def lifecycle_version = '2.3.0-alpha06'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
-    // Permission
+    // Permissions
     implementation 'org.permissionsdispatcher:permissionsdispatcher-ktx:1.0.0-alpha2'
 
     // Coroutines
@@ -65,7 +63,7 @@ dependencies {
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.0'
+    implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.activity:activity-ktx:1.2.0-alpha06'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
